<resources>
    <string name="app_name">Quiz Droid</string>

    <string name="title_activity_main_menu">Main Menu</string>
    <string name="title_activity_quiz_stage">Quiz Stage</string>
    <string name="title_activity_profile_creation">Profiles</string>
    <string name="title_activity_quiz_setup">Quiz Setup</string>
    <string name="title_activity_results">Results</string>

    <string name="debug_lorem_ipsum">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</string>
    <string name="debug_lorem_ipsum_short">Lorem ipsum dolor sit amet.</string>
    <string name="debug_default_text">DEFAULT</string>

    <string name="quiz_end_no_trails">This was your last try.</string>
    <string name="quiz_end_last_question">Last question.</string>

    <string name="label_results_name">Player:</string>
    <string name="label_results_score">Score:</string>
    <string name="label_results_correct_answers">Correct answers:</string>
    <string name="label_results_category">Category:</string>

    <string name="label_setup_category">Category:</string>
    <string name="label_setup_difficulty">Difficulty:</string>
    <string name="label_setup_length">Length:</string>

    <string name="label_results_difficulty">Difficulty:</string>

    <string name="button_Ok">Ok</string>
    <string name="button_versus">Versus</string>
    <string name="button_play_quiz">Player quiz</string>

    <string name="example_name">Leroy</string>
    <string name="example_score">9000</string>
    <string name="example_rounds">42</string>

    <string name="description_app_logo">App logo</string>
    <string name="description_app_settings">App settings</string>

    <string name="setup_no_matching_data">There are no questions matching your current settigs.</string>
    <string name="stage_question_skipped">Question skipped!</string>

    <string name="stage_tries">Tries:</string>
    <string name="description_skip_question">Skip question</string>
    <string name="example_tries">5</string>

</resources>
